# telecom-p1-grader

./: CMakeLists.txt  autograde.py  channel.cpp  channel.hpp  grade.py  plot.py  run  test.cpp
